[package]
name = "rocket_os"
version = "0.0.1"
edition = "2021"
authors = ["Tim Bishop <timbishop.csci@gmail.com>"]

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.12"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
